# StakeIt-Web3

./: .gitignore  Anchor.toml  Readme.md  package.json
app/dapp/: .dockerignore  .gitignore  dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
app/dapp/app/: Providers.tsx  globals.css  layout.tsx  page.tsx
app/dapp/app/admin/: page.tsx
app/dapp/app/api/user/: route.ts
app/dapp/app/claimPoints/: page.tsx
app/dapp/app/claimPoints/components/: Filters.tsx  Hero.tsx  NftList.tsx  StakingPrediction.tsx
app/dapp/app/createNft/: page.tsx
app/dapp/app/help/: page.tsx
app/dapp/app/help/components/: Faq.tsx  GettingStarted.tsx  Hero.tsx  Marketplace.tsx  Nfts.tsx  Staking.tsx
app/dapp/app/marketplace/: page.tsx
app/dapp/app/marketplace/components/: Hero.tsx  (+1 more)
app/dapp/app/myNfts/: page.tsx
app/dapp/app/stake/: page.tsx
app/dapp/components/: Appbar.tsx  CTA.tsx  Features.tsx  Footer.tsx  Hero.tsx  Landing.tsx  Stats.tsx  Testimonials.tsx
app/dapp/hooks/: Nft-Contract.ts  Staking.ts  contract.ts  getPdaAccountData.ts  listNft.ts  mintNft.ts  transferNft.ts  updatePoints.ts  useClaimPoints.ts  useCreatePda.ts  useGetPoints.ts  useStaking.ts  useUnstaking.ts
app/dapp/prisma/: schema.prisma
app/dapp/types/: nft.ts
app/dapp/utils/: stakingPrediction.ts
ops/: Certificate.yml  deployment.yml  ingress.yml  service.yml
programs/nft-contract/: Cargo.toml
programs/nft-contract/src/: lib.rs
programs/staking-contract/: Cargo.toml
programs/staking-contract/src/: lib.rs
tests/: nft-contract.ts  staking-contract.ts
(+24 files in other folders)
